# legio

./: .gitmodules  CMakeLists.txt  README.md
include/legio/: binary.hpp  common.hpp  configuration.hpp  legio.hpp  node.hpp  utils.hpp
peer/: main.cpp
src/: binary.cpp  node.cpp  utils.cpp
src/impl/: aesgcm.cpp  aesgcm.hpp  broadcastabletransport.cpp  broadcastabletransport.hpp  component.cpp  component.hpp  ecdh.cpp  ecdh.hpp  ecdsa.cpp  ecdsa.hpp  events.hpp  graph.cpp  graph.hpp  identifier.cpp  identifier.hpp  message.cpp  message.hpp  networking.cpp  networking.hpp  node.cpp  node.hpp  peering.cpp  peering.hpp  provisioning.cpp  provisioning.hpp  routing.cpp  routing.hpp  routingtable.cpp  routingtable.hpp  scheduler.cpp  scheduler.hpp  server.cpp  server.hpp  sha.cpp  sha.hpp  state.cpp  state.hpp  transport.cpp  transport.hpp
